# AutoTAS-Workbench

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/app/: bottompanel.rs  centerpanel.rs  eguirenderer.rs  monitorpanel.rs  monitors.rs  renderstate.rs  screencap.rs  toppanel.rs  windowstate.rs
src/app/monitors/: testmonitor.rs  toppanel.rs
