[package]
name = "auto-tas"
version = "0.1.0"
edition = "2021"

[dependencies]
egui-wgpu = { git = "https://github.com/emilk/egui", package = "egui-wgpu", default-features = true }
egui-winit = { git = "https://github.com/emilk/egui", package = "egui-winit" }
env_logger = "0.11.5"
tokio = { version = "1.39.2", features = ["full"] }
wgpu = "22.1.0"
winapi = "0.3.9"
